docs: add Docker launch guide and dev mode documentation
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>